--- a/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
+++ b/findly-builder/src/app/components/app-experiments/app-experiments.component.scss
@@ -434,6 +434,9 @@
             text-align: right;
             span {
               cursor: pointer;
+              &:hover{
+                color: #0d6efd;
+              }
             }
           }
         }
