--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -214,16 +214,20 @@
 
 				<div mat-button class="mat-button" [routerLink]="['/search-experience']" skipLocationChange routerLinkActive="active" (click)="preview('index')" mat-button>
 					<span class="inlineIconBox">
-						<img src="assets/icons/sidemenu/new-icons/channels.svg" class="defaultIcon">
-						<img src="assets/icons/sidemenu/new-icons/channels.svg" class="activeIcon">
+						<!-- <img src="assets/icons/sidemenu/new-icons/channels.svg" class="defaultIcon">
+						<img src="assets/icons/sidemenu/new-icons/channels.svg" class="activeIcon"> -->
+						<img src="assets/icons/sidemenu/new-icons/search-interface.svg" class="defaultIcon">
+						<img src="assets/icons/sidemenu/new-icons/search-interface.svg" class="activeIcon">
 					</span>
 					<span class="linkTitle">Search Interface</span>
 				</div>
 
 				<div mat-button class="mat-button" [routerLink]="['/searchInterface']" skipLocationChange routerLinkActive="active" (click)="preview('index')" mat-button>
 					<span class="inlineIconBox">
-						<img src="assets/icons/sidemenu/new-icons/search-interface.svg" class="defaultIcon">
-						<img src="assets/icons/sidemenu/new-icons/search-interface.svg" class="activeIcon">
+						<!-- <img src="assets/icons/sidemenu/new-icons/search-interface.svg" class="defaultIcon">
+						<img src="assets/icons/sidemenu/new-icons/search-interface.svg" class="activeIcon"> -->
+						<img src="assets/icons/sidemenu/new-icons/result-template.svg" class="defaultIcon">
+						<img src="assets/icons/sidemenu/new-icons/result-template.svg" class="activeIcon">
 					</span>
 					<span class="linkTitle">Result Templates </span>
 				</div>
