--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -138,7 +138,7 @@
                                                 <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('inputbox1', col);color=col;"></div>
                                             </ng-container>                                           
                                         </div>
-                                        <div class="save-switch" (click)="saveColor(color)">Save Color</div>
+                                        <div class="save-switch" (click)="saveColor(color)">Save & Apply</div>
                                      </div>
                                 </div>
                             </div>
@@ -170,7 +170,7 @@
                                                 <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('inputBox2', col);color1=col;"></div>
                                             </ng-container>                                           
                                         </div>
-                                        <div class="save-switch" (click)="saveColor(color1)">Save Color</div>
+                                        <div class="save-switch" (click)="saveColor(color1)">Save & Apply</div>
                                      </div>
                                 </div>
                             </div>
@@ -211,7 +211,7 @@
                                                 <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('placeholder', col);color2=col;"></div>
                                             </ng-container>                                           
                                         </div>
-                                        <div class="save-switch" (click)="saveColor(color2)">Save Color</div>
+                                        <div class="save-switch" (click)="saveColor(color2)">Save & Apply</div>
                                      </div>
                                 </div>
                             </div>
@@ -270,7 +270,7 @@
                                                     <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('buttonTextColor', col);color3=col;"></div>
                                                 </ng-container>                                           
                                             </div>
-                                            <div class="save-switch" (click)="saveColor(color3)">Save Color</div>
+                                            <div class="save-switch" (click)="saveColor(color3)">Save & Apply</div>
                                          </div>
                                     </div>
                                 </div>
@@ -301,7 +301,7 @@
                                                     <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('buttonFill', col);color4=col;"></div>
                                                 </ng-container>                                           
                                             </div>
-                                            <div class="save-switch" (click)="saveColor(color4)">Save Color</div>
+                                            <div class="save-switch" (click)="saveColor(color4)">Save & Apply</div>
                                          </div>
                                     </div>
                                 </div>
@@ -333,7 +333,7 @@
                                                     <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('buttonBorder', col);color5=col;"></div>
                                                 </ng-container>                                           
                                             </div>
-                                            <div class="save-switch" (click)="saveColor(color5)">Save Color</div>
+                                            <div class="save-switch" (click)="saveColor(color5)">Save & Apply</div>
                                          </div>
                                     </div>
                                 </div>
@@ -406,7 +406,7 @@
                                                         <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('msgColor', col);color6=col;"></div>
                                                     </ng-container>                                           
                                                 </div>
-                                                <div class="save-switch" (click)="saveColor(color6)">Save Color</div>
+                                                <div class="save-switch" (click)="saveColor(color6)">Save & Apply</div>
                                             </div>
                                         </div>
                                     </div>
