--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -50,7 +50,7 @@
             <div class="bot-name-sec">
               Bot Name: <span class="bot-name-title">{{linkedBotName}}</span>
                <span>
-                <a href="https://dev.findly.ai/botbuilder"> <img src="assets/icons/actions/external-link.svg" class="pl-2"></a>
+                <a href="{{botBulilderUrl}}/botbuilder"> <img src="assets/icons/actions/external-link.svg" class="pl-2"></a>
               </span>
             </div>
             <div class="bot-desc">{{linkedBotDescription}}</div>
@@ -78,7 +78,7 @@
           <img src="assets/icons/actions/info.svg">
           <div class="title-text pl-2">The App can interact with the linked bot only after the Webhook channel is published</div>
             <div class="link-ext-link">
-              <a href="https://dev.findly.ai/botbuilder">
+              <a href="{{botBulilderUrl}}/botbuilder">
               <img src="assets/icons/actions/external-link.svg" class="ext-link">
                 <span >Go to Platform</span>
               </a>
