--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -905,6 +905,16 @@ input:focus{
 .topdown-search-main-container .search-input-box .search-box-container-data .search-bar .search-input#suggestion {
   color: #8a959f;
 }
+.topdown-search-main-container .search-input-box .live_search_result_box::before,.topdown-search-main-container .search-input-box .frequently_searched_box::before{
+  content: "";
+  position: fixed;
+  background: rgba(255, 255, 255, 0.7);
+  width: 100%;
+  height: 100%;
+  left: 0;
+  z-index: -1;
+  top: 130px;
+  }
 .topdown-search-main-container .search-input-box .live_search_result_box ,.topdown-search-main-container .search-input-box .frequently_searched_box{
   background: #FFFFFF;
   box-shadow: 0px 0px 10px rgb(0 0 0 / 12%);
@@ -914,7 +924,7 @@ input:focus{
   /* min-height: 125px; */
   left: 0;
   right: 0;
-  top: 93px;
+  top: 66px;
   z-index: 9;
   /* margin: 0 auto; */
   display: none;
@@ -1110,7 +1120,7 @@ input:focus{
 
 
 .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .filters-added-data{
-  padding: 30px 20px 0px 20px;
+  padding: 20px 20px 0px 20px;
   display: inline-block;
   width: 100%;
 }
@@ -1228,7 +1238,7 @@ input:focus{
 
 .sdk-top-down-interface .faqs-search-data-container{
     clear: both;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
 }
 .sdk-top-down-interface .faqs-search-data-container .customizeEnabled:hover .custom-live-search-matched-results-actions {
     display: block;
@@ -2265,4 +2275,14 @@ display: none !important;
 
   .top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec.filter-added.if-customize-mode {
     max-height: calc(100vh - 458px) !important;
+}
+.sdk-top-down-interface .content-data-sec .total-structured-data-wrap {
+  margin-bottom: 30px;
+}
+.sdk-top-down-interface .kore-sdk-pagination-div {
+  margin-bottom: 30px;
+}
+
+.top-down-search-background-div .kore-sdk-pagination-div .kore-sdk-custom-pagination .kore-sdk-bottom-up-next {
+  padding: 4px;
 }
