--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -73,26 +73,17 @@
         </div>
       </div>      
     </div>
-    <ng-container *ngIf="!linkedBotData?.approvedChannels?.length">
-      <div class="info-link-bot-notification" >
-          <img src="assets/icons/actions/info.svg">
-          <div class="title-text pl-2">The App can interact with the linked bot only after the Webhook channel is published</div>
-            <div class="link-ext-link">
-              <a href="{{botBulilderUrl}}/botbuilder">
-              <img src="assets/icons/actions/external-link.svg" class="ext-link">
-                <span >Go to Platform</span>
-              </a>
-          </div>
-      </div>
-  </ng-container>
+
     <div class="task-list-data">
-      <div class="info-data-links">
+      <div class="info-data-links"  *ngIf="!linkedBotData?.approvedChannels?.length">
         <div class="info-text">
           <img src="assets/icons/actions/info-blue.svg">
           <span class="">The App can interact with the linked bot only after the Webhook channel is published</span>
         </div>
         <div class="ext_link">
+          <a href="{{botBulilderUrl}}/botbuilder">
           <img src="assets/icons/actions/external-link.svg">Go to Platform
+          </a>
         </div>
       </div>
       <div class="header-sec-tab-checked">
