bot actions findly text replace with SearchAssist

--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -176,7 +176,7 @@
   </div>
   <perfect-scrollbar class="perfect-scroll-modal-body">
     <div class="modal-body">
-        <div class="info-link-text">Choose any bot from the list to link it to your Findly app.</div>
+        <div class="info-link-text">Choose any bot from the list to link it to your SearchAssist app.</div>
         <div class="kr-sg-input-text">          
           <input type="text"placeholder="Search" [(ngModel)]="searchAssociatedBots" name="searchAssociatedBots" class="input-text"> 
           <img class="search-icon" src="assets/images/search_gray.svg">        
