--- a/findly-builder/src/app/components/structured-data/structured-data.component.html
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.html
@@ -145,7 +145,7 @@
                                         <img src="assets/icons/info.svg">
                                         <span class="tooltiptext">
                                             <div class="">{{'structuredData.updated_by' | translate}} : {{data.modUserDetails ? data.modUserDetails.fullName : ''}}</div>
-                                            <div class="">{{'structuredData.updated_on' | translate}} :  {{data.lMod | dateFormatPipe: 'DD-MMM-YYYY'}}</div>
+                                            <div class="">{{'structuredData.updated_on' | translate}} :  {{data.lMod | dateFormatPipe: 'DD MMM YYYY'}}</div>
                                         </span>
                                     </div>                                   
                                     <!-- Commented for now -->
